CHANGES.txt - 02/02/2001
------------------------

CHANGES IN CUPS V1.1.6-2

	- Added changes to support NetBSD startup scripts.
	- Added separate compiler options for pstoraster
	  (Ghostscript) to avoid compiler-induced errors
	  from Ghostscript's twisted code.
	- The mime.types file contained syntax errors.


CHANGES IN CUPS V1.1.6-1

	- Added configure check for getting the correct
	  strftime() format string; %c is not Y2k safe,
	  and %KC and NULL are not universally supported.


CHANGES IN CUPS V1.1.6

	- Fixed another possible DoS attack in httpGets()
	- Added check for "LANGUAGE = PCL" and "LANGUAGE =
	  POSTSCRIPT" in mime.types.
	- Resolution options were not being passed into the
	  filter programs properly.
	- The default compiler options for GCC no longer include
	  "-g3", which apparently is deprecated in newer
	  versions of GCC.
	- CheckJobs() could cause cupsd to crash if a job is
	  cancelled in StartJob().
	- The printers.conf and classes.conf files are now
	  written with restricted permissions.
	- The round-robin algorithm used by FindAvailablePrinter()
	  had problems; fixes contributed by Joel Fredrikson.
	- If LoadAllJobs() is unable to determine the file type
	  of a print job, assume "application/vnd.cups-raw".
	- The web interface now provides a job_printer_name
	  value for any corresponding job_printer_uri value.
	- The cups-lpd mini-daemon now logs the client address
	  and hostname as well as all commands and errors in the
	  syslog file.
	- The IPP backend now detects the supported file formats
	  and only specifies the document format if it is
	  supported.  This makes IPP printing to network print
	  servers and cards more reliable without affecting the
	  capabilities of CUPS servers.
	- The time_at_xyz attributes are now converted to human-
	  readable dates and times for the web interfaces.
	- The HP and EPSON sample drivers now correctly catch
	  signals and eject the current page when a job is
	  cancelled.