@@ -1,5 +1,5 @@
 /*
- * "$Id: imagetops.c,v 1.32 2001/01/24 17:18:56 mike Exp $"
+ * "$Id: imagetops.c,v 1.33 2001/02/06 23:40:08 mike Exp $"
  *
  *   Image file to PostScript filter for the Common UNIX Printing System (CUPS).
  *
@@ -126,23 +126,24 @@ main(int  argc,		/* I - Number of command-line arguments */
 
   if (argc == 6)
   {
-    FILE	*fp;		/* File to read from */
+    int		fd;		/* File to write to */
     char	buffer[8192];	/* Buffer to read into */
     int		bytes;		/* # of bytes to read */
 
 
-    if ((fp = fopen(cupsTempFile(filename, sizeof(filename)), "w")) == NULL)
+    if ((fd = cupsTempFd(filename, sizeof(filename))) < 0)
     {
       perror("ERROR: Unable to copy image file");
       return (1);
     }
 
-    fprintf(stderr, "DEBUG: imagetops - copying to temp print file \"%s\"\n",
+    fprintf(stderr, "DEBUG: imagetoraster - copying to temp print file \"%s\"\n",
             filename);
 
     while ((bytes = fread(buffer, 1, sizeof(buffer), stdin)) > 0)
-      fwrite(buffer, 1, bytes, fp);
-    fclose(fp);
+      write(fd, buffer, bytes);
+
+    close(fd);
   }
   else
   {
@@ -737,5 +738,5 @@ ps_ascii85(ib_t *data,		/* I - Data to print */
 
 
 /*
- * End of "$Id: imagetops.c,v 1.32 2001/01/24 17:18:56 mike Exp $".
+ * End of "$Id: imagetops.c,v 1.33 2001/02/06 23:40:08 mike Exp $".
  */
